--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
     <title>test</title>
     <script async src="bundle.js"></script>
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <main id="root">
